--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,75 @@
 /* Import Fonts */
 @import url(http://fonts.googleapis.com/css?family=Coustard|Open+Sans);
 
+
+/* Responsive Media Queries */
+
+@media screen and (max-width: 480px) {
+	.content {width: 90% !important; left: 5%; position: auto; top: 30px !important; left: 0px !important;
+	margin-top: 40px !important; margin-left: 5% !important; margin-right: 5% !important; padding-bottom: 150px !important;}
+	#logo {font-size: 1rem !important; position: unset !important}
+	.logo-accent {font-size: 0.8rem !important; left: 0px !important; top: -18px !important}
+	#arrow_left, #arrow_right {display: none;}
+	.social-nav {right:0px !important;}
+	.social-nav li {padding: 10px 10px 5px 10px !important;}
+	.lang-switcher ul {display: none !important;}
+	.main-nav ul li {display: block !important;}
+	.main-nav {position: fixed !important; right: 0px; left: unset !important; bottom: 0px !important; background: #000000B3; z-index: 99999 !important;}
+	h1 {font-size: 3rem !important;}
+	h5 {font-size: 1rem !important;}
+	p {font-size: 0.8rem !important;}
+	button.full-screen {display: none !important;}
+}
+
+@media screen and (min-width: 490px) and (max-width: 640px) {
+  	.content {width: 69%; left: 10%; position: auto; top: 30px !important; left: 0px !important;}
+	#logo {font-size: 1rem !important; position: relative !important; transform: rotate(90deg); transform-origin: top left; top: 50px; left: 99% !important;}
+	.logo-accent {font-size: 0.8rem !important; left: 0px !important; top: -18px !important}
+	.social-nav {right:0px !important;}
+	.social-nav li {padding: 10px 10px 5px 10px !important;}
+	#arrow_left, #arrow_right {position: fixed !important;}
+	.main-nav {position: fixed !important; right: unset; left: 0px !important; bottom: 0px !important; background: #000000B3; z-index: 99999 !important;}
+	h1 {font-size: 3rem !important;}
+	h5 {font-size: 1rem !important;}
+	p {font-size: 0.8rem !important;}
+	button.full-screen {display: none !important;}
+}
+
+@media screen and (min-width: 650px) and (max-width: 768px) {
+  	.content {width: 85% !important; left: 45px !important; top: 150px !important; padding-bottom: 100px !important;}
+}
+
+@media screen and (min-width: 770px) and (max-width: 1024px) {
+  	.content {width: 85% !important; left: 45px !important; top: 90px !important; padding-bottom: 100px !important;}
+	.main-nav {position: fixed !important; z-index: 99999 !important;}
+	#logo {position: fixed !important;}
+	#arrow_left, #arrow_right {position: fixed !important;}
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1590px) {
+  	.content {width: 65% !important; left: 10%; padding-bottom: 250px !important; top: 100px !important;}
+	.main-nav {position: fixed !important; z-index: 99999 !important;}
+	#logo {position: fixed !important;}
+	#arrow_left, #arrow_right {position: fixed !important;}
+}
+
+@media screen and (min-width: 1600px) {
+  	.content {width: 50% !important; left: 10%; padding-bottom: 250px !important;}
+	.main-nav {position: fixed !important; z-index: 99999 !important;}
+	#logo {position: fixed !important;}
+	#arrow_left, #arrow_right {position: fixed !important;}
+}
+
+/* styles */
+
 body {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	line-height: 21px;
+	font-size: 1rem;
+	line-height: 2rem;
 	font-weight:400;
 	-webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
-	color: #777;
+    	font-smoothing: antialiased;
+	color: #ddd;
 	background: #000;
 }
 h1, h2, h3, h4, h5, h6{
@@ -17,11 +78,11 @@ h1, h2, h3, h4, h5, h6{
 	font-weight: normal;
 	letter-spacing: 1px;
 }
-h1{font-size: 63px; line-height: 70px; padding: 0; margin: 0;}
-h5{font-size: 28px; line-height: 35px; padding: 0; margin: 0; color: #b7b7b7;}
+h1{font-size: 5rem; line-height: 70px; padding: 0; margin: 0;}
+h5{font-size: 2rem; line-height: 35px; padding: 0; margin: 0; color: #a4a4a4;}
 
 a {
-	color: #b7b7b7;
+	color: #a4a4a4;
 	text-decoration:none;
 	font-weight: normal;
 }
@@ -46,35 +107,47 @@ a:hover {text-decoration:underline;}
 .hide{opacity: 0;}
 
 /* Set Page Elements */
-.content { 
+.content {
 	float:left;
 	margin:40px;
 	position:absolute;
-	top:200px;
-	width:600px;
+	text-overflow: scroll;
+	top:150px;
+	left:100px;
+	width:60%;
 	z-index:9999;
 	-webkit-font-smoothing:antialiased;
+	padding-bottom: 60px;
 }
 
 #logo {
 	font-family: 'Coustard', serif;
-	font-size: 49px;
+	font-size: 3rem;
 	bottom:40px;
 	height:auto;
 	left:40px;
 	position:absolute;
-	width:20%;
+	width:80%;
 	z-index:1000;
 	color: #fff;
 }
 
+.logo-accent {
+	font-family: 'Coustard', serif;
+	font-size: 2rem;
+	color: #ffa800;
+	position: relative;
+	top: 18px;
+	left: 12px;
+}
+
 .main-nav{
 	position:absolute;
-	bottom: 23px;
-	left:210px;
+	bottom: 120px;
+	left: 67px;
 	z-index:1001;
 }
-.main-nav ul li { 
+.main-nav ul li {
 	list-style: none;
 	display: inline;
 	padding-right: 10px;
@@ -86,7 +159,7 @@ a:hover {text-decoration:underline;}
 .social-nav {
 	position:absolute;
 	top: 0px;
-	left: 40px;
+	right: 15%;
 }
 .social-nav ul {margin: 0; padding:0;}
 .social-nav ul li{
@@ -96,11 +169,11 @@ a:hover {text-decoration:underline;}
 	background: #393939;
 	padding:100px 10px 5px 10px;
 	margin: 1px;
-	opacity: .5;
+	opacity: .6;
 }
 .social-nav ul li:hover {opacity: 1;}
 
-button.full-screen{ 
+button.full-screen{
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -123,4 +196,22 @@ button.full-screen:hover {opacity: 1;}
 }
 #arrow_left {
 	right:95px;
+}
+
+.lang-switcher ul { list-style: none; display: inline-flex;}
+
+button.lang {
+  	font-family: Arial;
+  	color: #bbb;
+  	font-size: 10px;
+  	padding: 10px 10px 10px 10px;
+  	text-decoration: none;
+	background: none;
+	border: none;
+}
+
+button.lang:hover {
+  	background: none;
+  	text-decoration: none;
+	color: #ffa800;
 }
